cambios menores en la vista y en el json de samples

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
               <%= advert.tags %>
             </td>
             <td>
-              <a href = '#' > Foto <%= advert.name %> </a>
+              <a href = ""> <%= advert.picture %> </a>
             </td>
           </tr>
          <% }) %>
