mejoras al front-end

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
               <%= advert.tags %>
             </td>
             <td>
-              <a href = ""> <%= advert.picture %> </a>
+              <a href = <%=advert.picture %> > <%= advert.picture %> </a>
             </td>
           </tr>
          <% }) %>
